
import Foundation

public struct AccessibilityIdentifier {
    static let searchField = "AccessibilityIdentifierSearchMovies"
    static let tableView = "AccessibilityIdentifierMovieList"
    static let noMovieLabel = "AccessibilityIdentifierNoMovies"
}
